--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: jryankahle@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Please blog responsibly.
 
-baseurl: "/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://Ryan-321.github.io/" # the base hostname & protocol for your site
 twitter_username: JR3331
 github_username:  Ryan-321
